Fixed profile so my name isn't covered by the background(at least according to google chrome) for iphone6

--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ img {
 .profile-pic {
     max-width: 50% !important;
     position: relative;
-    bottom: 75px;
+    bottom: 5em;
     border: 2px solid whitesmoke;
     margin-bottom: -25%;
 }
